# stripe-playground

./: Cargo.toml  README.md
src/: config.rs  error.rs  lib.rs  main.rs  stripe_client.rs
tests/: stripe_types.rs
