[package]
name = "stripe-playground"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stripe = { version = "0.41.0", features = ["runtime-tokio-hyper"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
ratatui = "0.27"
crossterm = "0.27"
dotenvy = "0.15"
